add: desktop version of checkout page and draft of animation for checkout popup

--- a/2. Checkout Page/index.pug
+++ b/2. Checkout Page/index.pug
@@ -1,8 +1,7 @@
-html
 html(lang="en")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 head
-    title Login Page
+    title Checkout Page
 body
     div.c-container
         section.c-product
