--- a/2. Checkout Page/main.css
+++ b/2. Checkout Page/main.css
@@ -3,6 +3,8 @@ body {
   font-size: 1em;
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
   line-height: 1.48;
   background: linear-gradient(45deg, rgba(3, 169, 244, 0.7), #03a9f4);
   color: #212121;
@@ -14,6 +16,7 @@ div {
 
 h1, h2, h3, h4, h5 {
   font-family: "Francois One", sans-serif;
+  margin: 0;
 }
 
 .u-text-center, .c-checkout input:not([type=submit]), .c-checkout select, .c-checkout label {
@@ -48,6 +51,11 @@ h1, h2, h3, h4, h5 {
   min-height: 100vh;
   padding: 1em;
 }
+@media only screen and (min-width : 992px) {
+  .c-container {
+    flex-flow: row wrap;
+  }
+}
 
 .c-product {
   position: relative;
@@ -57,33 +65,48 @@ h1, h2, h3, h4, h5 {
   padding: 2em;
   box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.2);
 }
+@media only screen and (min-width : 992px) {
+  .c-product {
+    width: 100%;
+    height: 100%;
+    max-height: 550px;
+    max-width: 550px;
+  }
+}
 .c-product--brand {
   color: #616161;
   text-transform: uppercase;
-  margin: 0;
-}
-.c-product--name {
-  margin: 0;
 }
 .c-product-image {
   width: 100%;
+  max-width: 450px;
 }
 .c-product--price {
   font-family: "Francois One", sans-serif;
   font-size: 1.4em;
-  margin: 0;
 }
 .c-product--cart {
   position: absolute;
-  bottom: -1.4em;
+  bottom: -1.8em;
   background: linear-gradient(45deg, #4caf50, #66bb6a);
   border: 0;
   border-radius: 50%;
-  width: 3em;
-  height: 3em;
+  width: 3.5em;
+  height: 3.5em;
   color: white;
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
-  transition: 500ms;
+  z-index: 2;
+}
+@media only screen and (min-width : 992px) {
+  .c-product--cart {
+    top: 3em;
+    right: -1.8em;
+    bottom: auto;
+  }
+}
+.c-product--cart .fas {
+  font-size: 1.2em;
+  text-align: center;
 }
 .c-product--cart:hover {
   cursor: pointer;
@@ -97,6 +120,12 @@ h1, h2, h3, h4, h5 {
   color: white;
   border-radius: 10px;
   box-shadow: 5px 5px 25px 0px rgba(0, 0, 0, 0.2);
+  z-index: -1;
+}
+@media only screen and (min-width : 992px) {
+  .c-checkout {
+    border-radius: 0 10px 10px 0;
+  }
 }
 .c-checkout--wrapper {
   padding: 0 1em;
@@ -137,9 +166,54 @@ h1, h2, h3, h4, h5 {
   transition: 500ms;
   border-radius: 0 0 10px 10px;
 }
+@media only screen and (min-width : 992px) {
+  .c-checkout--submit {
+    border-radius: 0 0 10px 0;
+  }
+}
 .c-checkout--submit:hover {
   cursor: pointer;
   background: linear-gradient(45deg, #0288d1, #1976d2);
+}
+
+.active {
+  display: block;
+  animation: fade-in 0.8s;
+}
+@media only screen and (min-width : 992px) {
+  .active {
+    animation: fade-in-desktop 0.8s;
+  }
+}
+
+.deactive {
+  animation: fade-in reverse 0.8s;
+}
+@media only screen and (min-width : 992px) {
+  .deactive {
+    animation: fade-in-desktop reverse 0.8s;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-in-desktop {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
