--- a/7. Music Player/main.css
+++ b/7. Music Player/main.css
@@ -35,13 +35,41 @@ body {
 }
 
 .music-container {
+  position: relative;
   display: flex;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);
 }
 
+.album-cover {
+  flex: 1 0 30%;
+}
 .album-cover img {
   width: 100%;
   height: 100%;
+}
+
+.arrow {
+  position: absolute;
+  top: calc(50% - 2.5em);
+  background: rgba(255, 255, 255, 0.3);
+  border: 0;
+  width: 5em;
+  height: 5em;
+  cursor: pointer;
+}
+.arrow:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+.arrow img {
+  display: block;
+  width: 20px;
+  margin: 0 auto;
+}
+.arrow.left {
+  left: -5em;
+}
+.arrow.right {
+  right: -5em;
 }
 
 .music-player {
@@ -51,7 +79,7 @@ body {
   background: white;
   padding: 1em;
   text-align: center;
-  width: 100%;
+  width: 500px;
   max-width: 500px;
 }
 .music-player__title {
@@ -63,8 +91,14 @@ body {
 
 .music-bar {
   background: #efefef;
-  fill: #2196F3;
   stroke-width: 1;
+  height: 5px;
+}
+.music-bar #length {
+  width: 0%;
+  background: #2196F3;
+  height: 100%;
+  transition: width linear 400ms;
 }
 
 .music-time {
