fix: body not 100% issue in mobile version

--- a/7. Music Player/main.css
+++ b/7. Music Player/main.css
@@ -22,10 +22,12 @@ p {
 
 body {
   font-family: "Mukta", sans-serif;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  min-width: 100vw;
+  min-height: 100vh;
   background: linear-gradient(-45deg, #FFCDD2 50%, #B2EBF2 50%);
 }
 
@@ -36,12 +38,12 @@ section {
 
 .c-containter {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: 0 1em;
+  padding: 1em;
 }
 
 .music-container {
@@ -85,7 +87,7 @@ section {
 
 .music-player {
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   justify-content: center;
   background: white;
   padding: 1em;
@@ -150,14 +152,31 @@ section {
   height: 3em;
   margin: 0 1em;
 }
+.music-control__backward, .music-control__forward {
+  width: 1.5em;
+  height: 1.5em;
+}
 
-@media all and (max-width: 532px) {
+.disclaimer {
+  font-size: 0.9em;
+  margin-top: 1em;
+}
+.disclaimer a {
+  color: #2196F3;
+}
+
+@media all and (max-width: 768px) {
   .c-containter {
     display: block;
+    overflow: auto;
   }
 
   .music-container {
     flex-flow: column wrap;
+    max-height: inherit;
+    max-width: 270px;
+    margin: 0 auto;
+    overflow: auto;
   }
 
   .music-player {
@@ -171,13 +190,11 @@ section {
     font-size: 1em;
   }
 
-  .music-container {
-    margin: 1em;
-  }
-
   .album-cover {
     position: relative;
     flex: 1 1 100%;
+    max-width: 270px;
+    max-height: 270px;
   }
 
   .arrow {
