--- a/2. Checkout Page/index.pug
+++ b/2. Checkout Page/index.pug
@@ -7,7 +7,7 @@ body
         section.c-product
             h1.u-t3.u-text-center.c-product--brand Nintendo
             h2.u-t2.u-text-center.c-product--name Nintendo Switch
-            img.c-product-image(src="https://res.cloudinary.com/dkzj4hdmd/image/upload/v1535197484/bundle_mta_1-2-switch_front_j4kwm0.jpg")
+            img.c-product-image(src="http://cdn.atrera.com/images/bundle_mta_1-2-switch_front_j4kwm0.jpg")
             figure.u-text-center.c-product--price $299.99
             button.c-product--cart
                 i.fas.fa-cart-arrow-down
