--- a/9. Quiz/css/main.sass
+++ b/9. Quiz/css/main.sass
@@ -74,6 +74,7 @@ h6
         flex-direction: row
         max-width: 1280px
         margin: 0 auto
+        min-height: 450px;
         img
             border-radius: 0 8px 8px 0
 
@@ -85,8 +86,7 @@ h6
     @media #{$laptop}
         width: 100%
         height: auto
-        min-width: 480px
-        flex: 1 1 40%
+        flex: 0 0 500px
     img
         width: 100%
         height: 100%
@@ -99,6 +99,9 @@ h6
     @media #{$laptop}
         flex: 0 0 60%
         padding: 3em
+
+.quiz__question
+    min-height: 120px;
 
 .quiz__answer
     display: flex
@@ -139,7 +142,6 @@ h6
     color: white
     transition: ease 300ms
     width: 100%
-    max-width: 400px
 
     &--facebook
         background: #3b5998
@@ -147,3 +149,25 @@ h6
         background: #1dcaff
     &:hover
         cursor: pointer
+
+
+// ----------------------------------
+// Transitions
+// ----------------------------------
+.fade-enter
+  opacity: 0.01
+  transform: translateX(-10px)
+
+.fade-enter-active
+  opacity: 1
+  transform: translateX(0)
+  transition: all 400ms ease-in-out
+
+.fade-exit
+  opacity: 1
+  display: none
+
+.fade-exit-active 
+  opacity: 0.01
+  display: none
+  transition: all 400ms ease-in
