add: log of my journey and change styles of quiz

--- a/9. Quiz/css/main.sass
+++ b/9. Quiz/css/main.sass
@@ -76,6 +76,10 @@ h6
     text-align: center
     z-index: 1030
     transition-delay: 400ms
+    @media screen and (max-height: 300px)
+        justify-content: flex-start
+        overflow-y: scroll
+
     button
         background: $logo
         border: 0
