add: log and updated form validation page - fix pattern of name in pug - fix form position in mobile view - add my log for the 100 days of code
:

--- a/instant-form-validation/index.pug
+++ b/instant-form-validation/index.pug
@@ -22,7 +22,7 @@ body
                 span.u-alert#form-email-error Please enter a valid email format
             label(for="name")
                 span.c-form-label Name
-                input.c-form-input#form-name(type="text", name="name" pattern="^[a-z ,.'-]+$")
+                input.c-form-input#form-name(type="text", name="name" pattern="^[A-Za-z ,.'-]+$")
                 span.u-alert#form-name-error Please enter a valid name with alphabets only
             label(for="message")
                 span.c-form-label Message 
