--- a/instant-form-validation/main.sass
+++ b/instant-form-validation/main.sass
@@ -53,14 +53,12 @@ a:active
     content: ''
     position: absolute
     bottom: -1.2em
-    left: calc((100% - 3em) / 2)
+    left: calc((100% - 2.4em) / 2)
     width: 0
     height: 0
     border-style: solid
     border-width: 1.2em 1.2em 0 1.2em
     border-color: $theme transparent transparent transparent
-    @media #{$laptop}
-      left: calc((100% - 2.4em) / 2)
 
 .c-container
   display: flex
@@ -109,9 +107,10 @@ a:active
   
 .c-form
   max-width: 500px
-  margin: 0 auto
+  margin: 0
   @media #{$laptop}
     padding: 1em
+    margin: 0 auto
 
   label
     margin-bottom: 1em
